force-app/main/default/objects/Resource__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <label>Target Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Children 0-6 and parents</fullName>
            </value>
            <value>
                <fullName>Children 7-12 and parents</fullName>
            </value>
            <value>
                <fullName>Teenagers and parents</fullName>
            </value>
            <value>
                <fullName>College/Career students</fullName>
            </value>
            <value>
                <fullName>Adults</fullName>
            </value>
            <value>
                <fullName>Mental Health Providers</fullName>
            </value>
            <value>
                <fullName>Health Care Professionals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>