force-app/main/default/objects/Resource__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volunteer Opportunity</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Ongoing Resource</fullName>
            </value>
            <value>
                <fullName>Community Agency</fullName>
            </value>
            <value>
                <fullName>Reference/Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>