force-app/main/default/objects/Resource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Resource_Title__c</columns>
    <columns>Type__c</columns>
    <columns>Target_Audience__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>